[project]
name = "masksdkagent"
version = "0.1.0"
description = "Secure, Multi-language Email Agent Integration with Mask SDK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "en-core-web-sm",
    "es-core-news-sm",
    "google-api-python-client>=2.192.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "mask-privacy[spacy]==3.0.0",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
es-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl" }
